Added files via upload

--- a/paper.bib
+++ b/paper.bib
@@ -5425,8 +5425,35 @@ archivePrefix = "arXiv",
    adsurl = {http://adsabs.harvard.edu/abs/2009ApJ...696.1886B},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
+@ARTICLE{2016MNRAS.459...70V,
+   author = {{Vazza}, F. and {Br{\"u}ggen}, M. and {Wittor}, D. and {Gheller}, C. and 
+	{Eckert}, D. and {Stubbe}, M.},
+    title = "{Constraining the efficiency of cosmic ray acceleration by cluster shocks}",
+  journal = {\mnras},
+archivePrefix = "arXiv",
+   eprint = {1603.02688},
+ keywords = {acceleration of particles, shock waves, intergalactic medium},
+     year = 2016,
+    month = jun,
+   volume = 459,
+    pages = {70-83},
+      doi = {10.1093/mnras/stw584},
+   adsurl = {http://adsabs.harvard.edu/abs/2016MNRAS.459...70V},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
 
-
-
-
+@ARTICLE{2006MNRAS.366.1437S,
+   author = {{Subramanian}, K. and {Shukurov}, A. and {Haugen}, N.~E.~L.},
+    title = "{Evolving turbulence and magnetic fields in galaxy clusters}",
+  journal = {\mnras},
+   eprint = {astro-ph/0505144},
+ keywords = {MHD , turbulence , galaxies: clusters: general , galaxies: magnetic fields},
+     year = 2006,
+    month = mar,
+   volume = 366,
+    pages = {1437-1454},
+      doi = {10.1111/j.1365-2966.2006.09918.x},
+   adsurl = {http://adsabs.harvard.edu/abs/2006MNRAS.366.1437S},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
 
